# python

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
bootcamp/csv-profiler/data/: sample.csv  saudi_shopping_with_missing.csv
bootcamp/csv-profiler/outputs/: report.json  report.md
bootcamp/csv-profiler/src/: main.py
bootcamp/csv-profiler/src/csv_profiler/: __init__.py  io.py  profiler.py  render.py
src/csv_profiler/: __init__.py  __main__.py  app.py  cli.py  profiling.py  render.py  streamlit_app.py
